--- a/chamadas-frontend/package.json
+++ b/chamadas-frontend/package.json
@@ -16,7 +16,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-elements": "^3.4.3",
-    "react-native-web": "~0.19.6"
+    "react-native-router": "^0.2.1",
+    "react-native-web": "~0.19.6",
+    "react-router-native": "^6.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
