--- a/chamadas-frontend/package.json
+++ b/chamadas-frontend/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@expo/webpack-config": "^19.0.0",
+    "@ui-kitten/components": "^5.3.1",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -17,6 +19,8 @@
     "react-native": "0.72.4",
     "react-native-elements": "^3.4.3",
     "react-native-router": "^0.2.1",
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-svg": "^13.14.0",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.16.0"
   },
